# CrewAI-Publishing-House

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/publishing_house/: crew.py  main.py  types.py
src/publishing_house/crews/copy_to_a_document/: copy_to_a_document_crew.py
src/publishing_house/crews/copy_to_a_document/config/: agents.yaml  tasks.yaml
src/publishing_house/crews/copy_to_a_document/custom_tool/: custom_tool.py
src/publishing_house/crews/outline_book_crew/: outline_book_crew.py
src/publishing_house/crews/outline_book_crew/config/: agents.yaml  tasks.yaml
src/publishing_house/crews/write_book_crew/: write_book_crew.py
src/publishing_house/crews/write_book_crew/config/: agents.yaml  tasks.yaml
